public/main.css
:root {
    --text-primary: #000000;
    --text-secondary: #373737;
    --text-tertiary: #549c25;
    --bg-primary: #5f5e5e;
    --bg-secondary: rgb(64, 163, 31);
}

.nav-link {
    color: var(--text-primary);
}

.nav-link:hover,
.nav-item .active,
.nav-link:focus {
    color: var(--text-secondary);
}

.navbar {
    padding-bottom: 0px;
}

.navbar-brand {
    color: var(--text-primary);
}
.navbar-brand:hover {
    color: var(--text-primary);
}

#navbar {
    background-color: var(--bg-primary);
}

.form-floating label {
    white-space: nowrap;
    overflow: hidden;
}

.toolbar {
    width: 100%;
    background-color: var(--bg-secondary);
}

#insert-position-div,
#insert-item-div,
#insert-location-div {
    width: 95%;
    margin-left: 0%;
    padding: 2px;
    border-radius: 5px;
}

#insert-item-div {
    margin-left: 25%;
}

#edit-items-button {
    margin-right: 5%;
    height: 62px;
}
.right{
    float: right;
}

.modal-row {
    min-height: 50px;
}

#search-results-div {
    width: 500px;
    min-height: 10px;
    max-height: 300px;
    position: absolute;
    transform: translateY(40px);
    z-index: 2;
    display: none;
    background-color: white;
}

#buttons-bar {
    background-color: grey;
}

#items-div {
    width: 80%;
    margin-left: 10%;
}

.dropdown-a {
    max-width: 200px;
    display: inline-block;
    bottom: 0;
    text-align: center;
    display: flex;
    align-content: center;
    justify-content: center;
    flex-direction: column;
}

.item-outer-div,
.position-outer-div {
    margin-top: 5px;
}

#positions-div {
    width: 90%;
    margin-left: 5%;
}

#positions-div a {
    text-align: center;
    align-content: center;
    justify-content: center;
}

.category-tooltip {
    position: absolute;
    transform: translate(-50%, 70%);
    padding: 5px;
    border: solid 0.1rem #666;
}

.tooltip-span,
.tooltip-dates,
.category-tooltip {
    visibility: hidden;
    background-color: white;
    border: 1px solid black;
    position: absolute;
    z-index: 99;
    max-width: 300px;
}

a:hover .tooltip-span,
a:hover .tooltip-dates,
span:hover .category-tooltip {
    visibility: visible;
}

a {
    text-decoration: none;
    color: var(--text-primary);
}

a:hover {
    color: var(--text-primary);
}

.dec {
    text-decoration: underline;
    color: var(--text-tertiary);
}

.tooltip-span {
    transform: translate(10px, 70%);
}

.tooltip-dates {
    transform: translate(-50px, 70%);
}

table,
th,
td {
    border: 1px solid black;
}

#h-id {
    width: 3%;
}

#h-ware {
    width: auto;
}

#h-row,
#h-rack,
#h-she,
#h-del {
    width: 10%;
}

/*AUTOCOMPLETE*/
.autocomplete-items {
    border: solid 1px black;
    position: absolute;
    border-bottom: none;
    border-top: none;
    z-index: 99;
    /*position the autocomplete items to be the same width as the container:*/
    left: 0;
    right: 0;
}

.autocomplete-items div {
    padding: 10px;
    cursor: pointer;
    background-color: #fff;
    border-bottom: 1px solid #d4d4d4;
}

/*when hovering an item:*/
.autocomplete-items div:hover {
    background-color: #e9e9e9;
}

/*when navigating through the items using the arrow keys:*/
.autocomplete-active {
    background-color: DodgerBlue !important;
    color: #ffffff;
}

.category-dropdown {
    padding: 5px 10px 0px 10px;
    max-width: 400px;
    max-height: 600px;
    overflow: auto;
}

.category-dropdown > ul {
    padding-left: 0 !important;
}

.category-dropdown-div {
    position: absolute;
    border: solid 1px black;
    background-color: white;
    display: none;
}

.-w50 {
    width: 50% !important;
}

.-w40 {
    width: 40% !important;
}

.-w30 {
    width: 30% !important;
}

.-w26 {
    width: 26% !important;
}

.-w20 {
    width: 20% !important;
}

.-w15 {
    width: 15% !important;
}

.-w11 {
    width: 11% !important;
}

.-w10 {
    width: 10% !important;
}

.-w9 {
    width: 9% !important;
}

.-w7 {
    width: 7% !important;
}

.-w5 {
    width: 5% !important;
}

.-wauto {
    width: auto;
}

.-pb10 {
    padding-bottom: 10px;
}

.input-group div input {
    border-radius: 0px;
}

.align-m {
    padding-top: 1.15rem !important;
    padding-bottom: 0 !important;
}

.visible {
    display: flex !important;
}

#position-part-no-inputautocomplete-list {
    border-radius: 5px;
}

.pos-loc-div a {
    padding: 5px;
    border: 1px solid black;
    text-align: center;
    border-radius: 10px;
    margin-left: 5px;
}

.overflow-barless {
    overflow: auto;
    scrollbar-width: none; /* Firefox */
    -ms-overflow-style: none; /* IE and Edge */
    white-space: nowrap;
}

.overflow-b {
    white-space: nowrap;
}

#toggle-insert {
    padding-top: 0.85rem;
}

#sort-order {
    display: flex;
    flex-direction: row;
    align-items: center;
}

#sort-order em {
    margin-left: 5px;
}

.order-div {
    display: flex;
    justify-content: center;
    align-items: center;
}

ul {
    list-style-type: none;
}

.nested {
    display: none;
}

.active {
    display: block;
}

.category-em {
    padding: 0 5px 0 3px;
    margin-bottom: 4px;
    margin-left: 5px;
}

.caret-down {
    transform: rotate(90deg);
}

.category-span {
    padding: 0 25px;
    cursor: pointer;
}

.category-ul {
    border: 1px solid black;
    border-right: none;
    border-left: none;
}

.no-ul {
    margin-left: 23px;
}

.cat-active {
    background-color: var(--text-tertiary);
}

#category-add {
    border-top: 1px solid #dee2e6;
    max-height: 91px;
    justify-content: center;
}

#category-add-node {
    padding-top: 1.05rem;
    max-width: fit-content;
}

#category-body {
    max-height: 100%;
    overflow: auto;
}

.hidden-body {
    visibility: hidden;
    max-height: 0px !important;
    padding: 0px;
}

.modal-alert .modal-dialog {
    top: 30%;
    width: 380px;
}

#category-modal > div > div {
    height: 90vh;
}

.off {
    display: none;
}

#boobs{
    cursor: grab;
}

#boobs:active {
    cursor: grabbing;
}

#navbar-search-category-div > div {
    z-index: 1;
    transform: translateX(-150px);
    width: 250px;
}

.cat-res-div {
    border: black 1px solid;
    border-radius: 5px;
    margin: 10px 10px 10px 50px;
    padding-left: 5px;
}

#positions-search-result {
    text-align: center;
}

#positions-search-result > a {
    margin-top: 50%;
}

